src/components/hero.css
header {
    display: grid;
    padding-top: 1.625rem;
    padding-inline: 1rem;
}

.hero--img {
    place-self: center;
    width: 100%;
    max-width: 720px
}

.hero--text {
    padding-block: 2rem;
    padding-left: calc(33vw - 175px);
}

.hero--text h1 {
    word-spacing: -4px;
    font-size: 2.25rem;
}

.hero--text > p {
    max-width: 32ch;
    font-size: 1rem;
}

